--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Music</string>
+    <string name="nowPlaying">Now Playing</string>
+    <string name="songs">Songs</string>
+    <string name="search">Search</string>
+    <string name="store">Store</string>
+
 </resources>
